--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "strict": false
+
   },
   "include": [
     "src"
