--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-scripts": "3.3.0",
+    "react-transition-group": "^4.3.0",
     "typescript": "~3.7.2",
     "uuid": "^3.3.3"
   },
